--- a/_locales/zh-cn/poweredu-strings.json
+++ b/_locales/zh-cn/poweredu-strings.json
@@ -11,10 +11,5 @@
     "poweredu.MotorRunDual|block": "电机|%motor1|速度 %speed1|%motor2|速度 %speed2",
     "poweredu.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
     "poweredu.MotorStop|block": "电机 停止|%index|",
-    "poweredu.MotorStopAll|block": "停止所有电机",
-    "poweredu.RgbUltrasonic|block": "猫耳RGB超声波|引脚 %pin",
-    "poweredu.HoleUltrasonic|block": "猫耳洞超声波|引脚 %pin",
-    "poweredu.MatrixDraw|block": "LED矩阵 描点|X %x|Y %y",
-    "poweredu.MatrixClear|block": "清空 LED矩阵 ",
-    "poweredu.MatrixRefresh|block": "刷新 LED矩阵 "
+    "poweredu.MotorStopAll|block": "停止所有电机"
 }
