--- a/_locales/zh-cn/poweredu-strings.json
+++ b/_locales/zh-cn/poweredu-strings.json
@@ -11,5 +11,80 @@
     "poweredu.MotorRunDual|block": "电机|%motor1|速度 %speed1|%motor2|速度 %speed2",
     "poweredu.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
     "poweredu.MotorStop|block": "电机 停止|%index|",
-    "poweredu.MotorStopAll|block": "停止所有电机"
+    "poweredu.MotorStopAll|block": "停止所有电机",
+    "poweredu.Ultrasonic|block": "超声波|端口 %port",
+    "poweredu.SoundSensor|block": "声音强度|端口 %port",
+    "poweredu.Tracer|block": "巡线|端口 %port|插槽 %slot",
+    "poweredu.onTracerEvent|block": "当巡线|%port|插槽 %slot 遇黑线时",
+    "poweredu.Bumper|block": "开关|端口 %port|插槽 %slot",
+    "poweredu.onBumperEvent|block": "当开关|端口 %port|插槽 %slot 被按下时",
+    "poweredu.DHT11|block": "DHT11温度|端口 %port|类型 %readtype",
+    "poweredu.Soil|block": "土壤传感器|端口 %port",
+    "poweredu.WaterLevel|block": "水位传感器|端口 %port",
+    "poweredu.MP3Connect|block": "MP3 连接|端口 %port",
+    "poweredu.MP3Play|block": "MP3 播放|%PrevNext",
+    "poweredu.MP3Volumn|block": "MP3 音量|%volumn",
+    "poweredu.MP3PlayIndex|block": "MP3 播放 序号|%index",
+    "poweredu.MP3PlayName|block": "MP3 播放 名称|%name",
+    "poweredu.GC_MODE|block": "手势/颜色 模式|%mode",
+    "poweredu.GC_Color|block": "手势/颜色 色环角度",
+    "poweredu.GC_Brightness|block": "手势/颜色 亮度",
+    "poweredu.GC_LEDPWM|block": "手势/颜色 LED 亮度|%pwm",
+    "poweredu.GC_LEDONOFF|block": "手势/颜色 LED|%index|亮/灭 %onoff",
+    "poweredu.GC_LEDBIT|block": "手势/颜色|LED1 %l1|LED2 %l2|LED3 %l3|LED4 %l4",
+    "poweredu.GC_PROXIMITY|block": "手势/颜色 距离",
+    "poweredu.GC_Gesture|block": "手势/颜色 上一个手势",
+    "poweredu.GC_RGB|block": "手势/颜色 RGB|%rgb",
+    "poweredu.RfidProbe|block": "RFID 开始检测",
+    "poweredu.RfidPresent|block": "RFID 检测到卡片并等待",
+    "poweredu.RfidWrite|block": "RFID写 区|%sector 块|%block 文本|%txt",
+    "poweredu.RfidRead|block": "RFID读 区|%sector 块|%block",
+    "poweredu.rgbConnect|block": "RGB 连接到 %port",
+    "poweredu.showRainbow|block": "霓虹效果 从 %startHue|到 %endHue",
+    "poweredu.showColor|block": "显示颜色 %rgb=neopixel_colors",
+    "poweredu.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
+    "poweredu.rgbClear|block": "RGB 清屏",
+    "poweredu.setRGBPix|block": "RGB 像素%pix 颜色%rgb=neopixel_colors",
+    "poweredu.setRGBXy|block": "RGB X%x Y%y 颜色%rgb=neopixel_colors",
+    "poweredu.rgb|block": "颜色 红 %red|绿 %green|蓝 %blue",
+    "poweredu.rgbShow|block": "RGB 显示刷新",
+    "poweredu.showNum|block": "显示数字 %num 颜色%rgb=neopixel_colors",
+    "poweredu.setBrightness|block": "RGB 亮度 %brightness",
+    "poweredu.rgbPixRotate|block": "像素循环 %offset",
+    "poweredu.GetPin|block": "数字 端口|%port 插槽|%slot",
+    "poweredu.GetAnalog|block": "模拟 端口|%port 插槽|%slot",
+    "poweredu.InfraTemp|block": "红外温度",
+    "poweredu.EnvironTemp|block": "环境温度",
+    "poweredu.InfraLED|block": "红外测温 LED 红:%red 绿:%green 黄:%yellow",
+    "poweredu.segOn|block": "打开显示",
+    "poweredu.segOff|block": "关闭显示",
+    "poweredu.segClear|block": "清空显示",
+    "poweredu.segDigit|block": "显示数字 %num|在 %bit",
+    "poweredu.segShowNumber|block": "显示数字 %num",
+    "poweredu.segShowDpAt|block": "小数点位置 %bit|显示 %show",
+    "poweredu.segSetIntensity|block": "设置亮度 %dat",
+    "poweredu.DHT11Type.TemperatureC|block": "温度(°C)",
+    "poweredu.DHT11Type.TemperatureF|block": "温度(°F)",
+    "poweredu.DHT11Type.Humidity|block": "湿度",
+    "poweredu.PrevNext.Play|block": "播放",
+    "poweredu.PrevNext.Stop|block": "停止",
+    "poweredu.PrevNext.Prev|block": "前一首",
+    "poweredu.PrevNext.Next|block": "下一首",
+    "poweredu.GCMode.ColorSensor|block": "颜色模式",
+    "poweredu.GCMode.Proximity|block": "近距模式",
+    "poweredu.GCMode.Gesture|block": "手势模式",
+    "poweredu.GCRgb.Brightness|block": "亮度",
+    "poweredu.GCRgb.Red|block": "红",
+    "poweredu.GCRgb.Green|block": "绿",
+    "poweredu.GCRgb.Blue|block": "蓝",
+    "poweredu.NeoPixelColors.Red|block": "红",
+    "poweredu.NeoPixelColors.Orange|block": "橙",
+    "poweredu.NeoPixelColors.Yellow|block": "黄",
+    "poweredu.NeoPixelColors.Green|block": "緑",
+    "poweredu.NeoPixelColors.Blue|block": "蓝",
+    "poweredu.NeoPixelColors.Indigo|block": "靛蓝",
+    "poweredu.NeoPixelColors.Violet|block": "紫罗兰",
+    "poweredu.NeoPixelColors.Purple|block": "紫",
+    "poweredu.NeoPixelColors.White|block": "白",
+    "poweredu.NeoPixelColors.Black|block": "黑"
 }
