--- a/_locales/zh-cn/poweredu-strings.json
+++ b/_locales/zh-cn/poweredu-strings.json
@@ -12,16 +12,16 @@
     "PowerEDU.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
     "PowerEDU.MotorStop|block": "电机 停止|%index|",
     "PowerEDU.MotorStopAll|block": "停止所有电机",
-    "PowerEDU.Ultrasonic|block": "超声波|端口 %port",
-    "PowerEDU.SoundSensor|block": "声音强度|端口 %port",
-    "PowerEDU.Tracer|block": "巡线|端口 %port|插槽 %slot",
-    "PowerEDU.onTracerEvent|block": "当巡线|%port|插槽 %slot 遇黑线时",
-    "PowerEDU.Bumper|block": "开关|端口 %port|插槽 %slot",
-    "PowerEDU.onBumperEvent|block": "当开关|端口 %port|插槽 %slot 被按下时",
-    "PowerEDU.DHT11|block": "DHT11温度|端口 %port|类型 %readtype",
-    "PowerEDU.Soil|block": "土壤传感器|端口 %port",
-    "PowerEDU.WaterLevel|block": "水位传感器|端口 %port",
-    "PowerEDU.MP3Connect|block": "MP3 连接|端口 %port",
+    "PowerEDU.Ultrasonic|block": "超声波|端口 %pin",
+    "PowerEDU.SoundSensor|block": "声音强度|端口 %pin",
+    "PowerEDU.Tracer|block": "巡线|端口 %pin",
+    "PowerEDU.onTracerEvent|block": "当巡线|%pin 遇黑线时",
+    "PowerEDU.Bumper|block": "开关|端口 %pin",
+    "PowerEDU.onBumperEvent|block": "当开关|端口 %pin 被按下时",
+    "PowerEDU.DHT11|block": "DHT11温度|端口 %pin|类型 %readtype",
+    "PowerEDU.Soil|block": "土壤传感器|端口 %pin",
+    "PowerEDU.WaterLevel|block": "水位传感器|端口 %pin",
+    "PowerEDU.MP3Connect|block": "MP3 连接|RX端口 %rxpin |TX端口 %txpin",
     "PowerEDU.MP3Play|block": "MP3 播放|%PrevNext",
     "PowerEDU.MP3Volumn|block": "MP3 音量|%volumn",
     "PowerEDU.MP3PlayIndex|block": "MP3 播放 序号|%index",
@@ -39,7 +39,7 @@
     "PowerEDU.RfidPresent|block": "RFID 检测到卡片并等待",
     "PowerEDU.RfidWrite|block": "RFID写 区|%sector 块|%block 文本|%txt",
     "PowerEDU.RfidRead|block": "RFID读 区|%sector 块|%block",
-    "PowerEDU.rgbConnect|block": "RGB 连接到 %port",
+    "PowerEDU.rgbConnect|block": "RGB 连接到 %pin",
     "PowerEDU.showRainbow|block": "霓虹效果 从 %startHue|到 %endHue",
     "PowerEDU.showColor|block": "显示颜色 %rgb=neopixel_colors",
     "PowerEDU.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
@@ -51,8 +51,6 @@
     "PowerEDU.showNum|block": "显示数字 %num 颜色%rgb=neopixel_colors",
     "PowerEDU.setBrightness|block": "RGB 亮度 %brightness",
     "PowerEDU.rgbPixRotate|block": "像素循环 %offset",
-    "PowerEDU.GetPin|block": "数字 端口|%port 插槽|%slot",
-    "PowerEDU.GetAnalog|block": "模拟 端口|%port 插槽|%slot",
     "PowerEDU.InfraTemp|block": "红外温度",
     "PowerEDU.EnvironTemp|block": "环境温度",
     "PowerEDU.InfraLED|block": "红外测温 LED 红:%red 绿:%green 黄:%yellow",
