--- a/_locales/zh-cn/PowerEDU-strings.json
+++ b/_locales/zh-cn/PowerEDU-strings.json
@@ -10,7 +10,7 @@
     "PowerEDU.MotorRun|block": "电机|%index|速度 %speed",
     "PowerEDU.MotorRunDual|block": "电机|%motor1|速度 %speed1|%motor2|速度 %speed2",
     "PowerEDU.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
-    "PowerEDU.MotorStop|block": "电机 停止|%index|",
+    "PowerEDU.MotorStop|block": "电机 停止|%index",
     "PowerEDU.MotorStopAll|block": "停止所有电机",
     "PowerEDU.Ultrasonic|block": "超声波|端口 %pin",
     "PowerEDU.SoundSensor|block": "声音强度|端口 %pin",
