--- a/_locales/zh-tw/PowerEDU-strings.json
+++ b/_locales/zh-tw/PowerEDU-strings.json
@@ -1,87 +1,87 @@
 {
-    "PowerEDU.Servo|block": "9g舵机|%index|角度 %degree",
-    "PowerEDU.GeekServo|block": "Geekservo|9g舵机|%index|角度 %degree",
-    "PowerEDU.GeekServo2KG|block": "Geekservo|2KG舵机|%index|角度 %degree",
-    "PowerEDU.StepperDegree|block": "步进 28BYJ-48|%index|角度 %degree",
-    "PowerEDU.StepperTurn|block": "步进 28BYJ-48|%index|圈数 %turn",
-    "PowerEDU.StepperDual|block": "双步进(角度) |M1 %degree1| M2 %degree2",
-    "PowerEDU.StpCarMove|block": "步进小车 前进 |距离(cm) %distance|轮直径(mm) %diameter",
-    "PowerEDU.StpCarTurn|block": "步进小车 转向 |角度 %turn|轮直径(mm) %diameter|轮距(mm) %track",
-    "PowerEDU.MotorRun|block": "电机|%index|速度 %speed",
-    "PowerEDU.MotorRunDual|block": "电机|%motor1|速度 %speed1|%motor2|速度 %speed2",
-    "PowerEDU.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
-    "PowerEDU.MotorStop|block": "电机 停止|%index|",
-    "PowerEDU.MotorStopAll|block": "停止所有电机",
-    "PowerEDU.Ultrasonic|block": "超声波|端口 %pin",
-    "PowerEDU.SoundSensor|block": "声音强度|端口 %pin",
-    "PowerEDU.Tracer|block": "巡线|端口 %pin",
-    "PowerEDU.onTracerEvent|block": "当巡线|%pin 遇黑线时",
-    "PowerEDU.Bumper|block": "开关|端口 %pin",
-    "PowerEDU.onBumperEvent|block": "当开关|端口 %pin 被按下时",
-    "PowerEDU.DHT11|block": "DHT11温度|端口 %pin|类型 %readtype",
-    "PowerEDU.Soil|block": "土壤传感器|端口 %pin",
-    "PowerEDU.WaterLevel|block": "水位传感器|端口 %pin",
-    "PowerEDU.MP3Connect|block": "MP3 连接|RX端口 %rxpin |TX端口 %txpin",
+    "PowerEDU.Servo|block": "9g舵機|%index|角度 %degree",
+    "PowerEDU.GeekServo|block": "Geekservo 9g舵機|%index|角度 %degree",
+    "PowerEDU.GeekServo2KG|block": "Geekservo 2KG舵機|%index|角度 %degree",
+    "PowerEDU.StepperDegree|block": "步進 28BYJ-48|%index|角度 %degree",
+    "PowerEDU.StepperTurn|block": "步進 28BYJ-48|%index|圈數 %turn",
+    "PowerEDU.StepperDual|block": "雙步進(角度) |M1 %degree1| M2 %degree2",
+    "PowerEDU.StpCarMove|block": "步進小車 前進 |距離(cm) %distance|輪直徑(mm) %diameter",
+    "PowerEDU.StpCarTurn|block": "步進小車 轉向 |角度 %turn|輪直徑(mm) %diameter|輪距(mm) %track",
+    "PowerEDU.MotorRun|block": "電機|%index|速度 %speed",
+    "PowerEDU.MotorRunDual|block": "電機|%motor1|速度 %speed1|%motor2|速度 %speed2",
+    "PowerEDU.MotorRunDelay|block": "電機|%index|速度 %speed|延時 %delay|s",
+    "PowerEDU.MotorStop|block": "電機 停止|%index|",
+    "PowerEDU.MotorStopAll|block": "停止所有電機",
+    "PowerEDU.Ultrasonic|block": "超聲波|端口 %pin",
+    "PowerEDU.SoundSensor|block": "聲音強度|端口 %pin",
+    "PowerEDU.Tracer|block": "巡線|端口 %pin",
+    "PowerEDU.onTracerEvent|block": "當巡線|%pin 遇黑線時",
+    "PowerEDU.Bumper|block": "開關|端口 %pin",
+    "PowerEDU.onBumperEvent|block": "當開關|端口 %pin 被按下時",
+    "PowerEDU.DHT11|block": "DHT11溫度|端口 %pin|類型 %readtype",
+    "PowerEDU.Soil|block": "土壤傳感器|端口 %pin",
+    "PowerEDU.WaterLevel|block": "水位傳感器|端口 %pin",
+    "PowerEDU.MP3Connect|block": "MP3 連接|RX端口 %rxpin |TX端口 %txpin",
     "PowerEDU.MP3Play|block": "MP3 播放|%PrevNext",
     "PowerEDU.MP3Volumn|block": "MP3 音量|%volumn",
-    "PowerEDU.MP3PlayIndex|block": "MP3 播放 序号|%index",
-    "PowerEDU.MP3PlayName|block": "MP3 播放 名称|%name",
-    "PowerEDU.GC_MODE|block": "手势/颜色 模式|%mode",
-    "PowerEDU.GC_Color|block": "手势/颜色 色环角度",
-    "PowerEDU.GC_Brightness|block": "手势/颜色 亮度",
-    "PowerEDU.GC_LEDPWM|block": "手势/颜色 LED 亮度|%pwm",
-    "PowerEDU.GC_LEDONOFF|block": "手势/颜色 LED|%index|亮/灭 %onoff",
-    "PowerEDU.GC_LEDBIT|block": "手势/颜色|LED1 %l1|LED2 %l2|LED3 %l3|LED4 %l4",
-    "PowerEDU.GC_PROXIMITY|block": "手势/颜色 距离",
-    "PowerEDU.GC_Gesture|block": "手势/颜色 上一个手势",
-    "PowerEDU.GC_RGB|block": "手势/颜色 RGB|%rgb",
-    "PowerEDU.RfidProbe|block": "RFID 开始检测",
-    "PowerEDU.RfidPresent|block": "RFID 检测到卡片并等待",
-    "PowerEDU.RfidWrite|block": "RFID写 区|%sector 块|%block 文本|%txt",
-    "PowerEDU.RfidRead|block": "RFID读 区|%sector 块|%block",
-    "PowerEDU.rgbConnect|block": "RGB 连接到 %pin",
-    "PowerEDU.showRainbow|block": "霓虹效果 从 %startHue|到 %endHue",
-    "PowerEDU.showColor|block": "显示颜色 %rgb=neopixel_colors",
-    "PowerEDU.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
+    "PowerEDU.MP3PlayIndex|block": "MP3 播放 序號|%index",
+    "PowerEDU.MP3PlayName|block": "MP3 播放 名稱|%name",
+    "PowerEDU.GC_MODE|block": "手勢/顏色 模式|%mode",
+    "PowerEDU.GC_Color|block": "手勢/顏色 色環角度",
+    "PowerEDU.GC_Brightness|block": "手勢/顏色 亮度",
+    "PowerEDU.GC_LEDPWM|block": "手勢/顏色 LED 亮度|%pwm",
+    "PowerEDU.GC_LEDONOFF|block": "手勢/顏色 LED|%index|亮/滅 %onoff",
+    "PowerEDU.GC_LEDBIT|block": "手勢/顏色|LED1 %l1|LED2 %l2|LED3 %l3|LED4 %l4",
+    "PowerEDU.GC_PROXIMITY|block": "手勢/顏色 距離",
+    "PowerEDU.GC_Gesture|block": "手勢/顏色 上一個手勢",
+    "PowerEDU.GC_RGB|block": "手勢/顏色 RGB|%rgb",
+    "PowerEDU.RfidProbe|block": "RFID 開始檢測",
+    "PowerEDU.RfidPresent|block": "RFID 檢測到卡片並等待",
+    "PowerEDU.RfidWrite|block": "RFID寫 區|%sector 塊|%block 文本|%txt",
+    "PowerEDU.RfidRead|block": "RFID讀 區|%sector 塊|%block",
+    "PowerEDU.rgbConnect|block": "RGB 連接到 %pin",
+    "PowerEDU.showRainbow|block": "霓虹效果 從 %startHue|到 %endHue",
+    "PowerEDU.showColor|block": "顯示顏色 %rgb=neopixel_colors",
+    "PowerEDU.hsl|block": "色相 %h|飽和度 %s|亮度 %l",
     "PowerEDU.rgbClear|block": "RGB 清屏",
-    "PowerEDU.setRGBPix|block": "RGB 像素%pix 颜色%rgb=neopixel_colors",
-    "PowerEDU.setRGBXy|block": "RGB X%x Y%y 颜色%rgb=neopixel_colors",
-    "PowerEDU.rgb|block": "颜色 红 %red|绿 %green|蓝 %blue",
-    "PowerEDU.rgbShow|block": "RGB 显示刷新",
-    "PowerEDU.showNum|block": "显示数字 %num 颜色%rgb=neopixel_colors",
+    "PowerEDU.setRGBPix|block": "RGB 像素%pix 顏色%rgb=neopixel_colors",
+    "PowerEDU.setRGBXy|block": "RGB X%x Y%y 顏色%rgb=neopixel_colors",
+    "PowerEDU.rgb|block": "顏色 紅 %red|綠 %green|藍 %blue",
+    "PowerEDU.rgbShow|block": "RGB 顯示刷新",
+    "PowerEDU.showNum|block": "顯示數字 %num 顏色%rgb=neopixel_colors",
     "PowerEDU.setBrightness|block": "RGB 亮度 %brightness",
-    "PowerEDU.rgbPixRotate|block": "像素循环 %offset",
-    "PowerEDU.InfraTemp|block": "红外温度",
-    "PowerEDU.EnvironTemp|block": "环境温度",
-    "PowerEDU.InfraLED|block": "红外测温 LED 红:%red 绿:%green 黄:%yellow",
-    "PowerEDU.segOn|block": "打开显示",
-    "PowerEDU.segOff|block": "关闭显示",
-    "PowerEDU.segClear|block": "清空显示",
-    "PowerEDU.segDigit|block": "显示数字 %num|在 %bit",
-    "PowerEDU.segShowNumber|block": "显示数字 %num",
-    "PowerEDU.segShowDpAt|block": "小数点位置 %bit|显示 %show",
-    "PowerEDU.segSetIntensity|block": "设置亮度 %dat",
-    "PowerEDU.DHT11Type.TemperatureC|block": "温度(°C)",
-    "PowerEDU.DHT11Type.TemperatureF|block": "温度(°F)",
-    "PowerEDU.DHT11Type.Humidity|block": "湿度",
+    "PowerEDU.rgbPixRotate|block": "像素循環 %offset",
+    "PowerEDU.InfraTemp|block": "紅外溫度",
+    "PowerEDU.EnvironTemp|block": "環境溫度",
+    "PowerEDU.InfraLED|block": "紅外測溫 LED 紅:%red 綠:%green 黃:%yellow",
+    "PowerEDU.segOn|block": "打開顯示",
+    "PowerEDU.segOff|block": "關閉顯示",
+    "PowerEDU.segClear|block": "清空顯示",
+    "PowerEDU.segDigit|block": "顯示數字 %num|在 %bit",
+    "PowerEDU.segShowNumber|block": "顯示數字 %num",
+    "PowerEDU.segShowDpAt|block": "小數點位置 %bit|顯示 %show",
+    "PowerEDU.segSetIntensity|block": "設置亮度 %dat",
+    "PowerEDU.DHT11Type.TemperatureC|block": "溫度(°C)",
+    "PowerEDU.DHT11Type.TemperatureF|block": "溫度(°F)",
+    "PowerEDU.DHT11Type.Humidity|block": "濕度",
     "PowerEDU.PrevNext.Play|block": "播放",
     "PowerEDU.PrevNext.Stop|block": "停止",
     "PowerEDU.PrevNext.Prev|block": "前一首",
     "PowerEDU.PrevNext.Next|block": "下一首",
-    "PowerEDU.GCMode.ColorSensor|block": "颜色模式",
+    "PowerEDU.GCMode.ColorSensor|block": "顏色模式",
     "PowerEDU.GCMode.Proximity|block": "近距模式",
-    "PowerEDU.GCMode.Gesture|block": "手势模式",
+    "PowerEDU.GCMode.Gesture|block": "手勢模式",
     "PowerEDU.GCRgb.Brightness|block": "亮度",
-    "PowerEDU.GCRgb.Red|block": "红",
-    "PowerEDU.GCRgb.Green|block": "绿",
-    "PowerEDU.GCRgb.Blue|block": "蓝",
-    "PowerEDU.NeoPixelColors.Red|block": "红",
+    "PowerEDU.GCRgb.Red|block": "紅",
+    "PowerEDU.GCRgb.Green|block": "綠",
+    "PowerEDU.GCRgb.Blue|block": "藍",
+    "PowerEDU.NeoPixelColors.Red|block": "紅",
     "PowerEDU.NeoPixelColors.Orange|block": "橙",
-    "PowerEDU.NeoPixelColors.Yellow|block": "黄",
+    "PowerEDU.NeoPixelColors.Yellow|block": "黃",
     "PowerEDU.NeoPixelColors.Green|block": "緑",
-    "PowerEDU.NeoPixelColors.Blue|block": "蓝",
-    "PowerEDU.NeoPixelColors.Indigo|block": "靛蓝",
-    "PowerEDU.NeoPixelColors.Violet|block": "紫罗兰",
+    "PowerEDU.NeoPixelColors.Blue|block": "藍",
+    "PowerEDU.NeoPixelColors.Indigo|block": "靛藍",
+    "PowerEDU.NeoPixelColors.Violet|block": "紫羅蘭",
     "PowerEDU.NeoPixelColors.Purple|block": "紫",
     "PowerEDU.NeoPixelColors.White|block": "白",
     "PowerEDU.NeoPixelColors.Black|block": "黑"
