pin a pin b desc

--- a/_locales/zh-TW/PowerEDU-strings.json
+++ b/_locales/zh-TW/PowerEDU-strings.json
@@ -12,21 +12,21 @@
     "PowerEDU.MotorRunDelay|block": "電機|%index|速度 %speed|延時 %delay|s",
     "PowerEDU.MotorStop|block": "電機 停止|%index|",
     "PowerEDU.MotorStopAll|block": "停止所有電機",
-    "PowerEDU.Ultrasonic|block": "超聲波|端口 %pin",
-    "PowerEDU.SoundSensor|block": "聲音強度|端口 %pin",
+    "PowerEDU.Ultrasonic|block": "超聲波(引腳B)|端口 %pin",
+    "PowerEDU.SoundSensor|block": "聲音強度(引腳A)|端口 %pin",
     "PowerEDU.Tracer|block": "巡線|端口 %pin",
     "PowerEDU.onTracerEvent|block": "當巡線|%pin 遇黑線時",
     "PowerEDU.Bumper|block": "開關|端口 %pin",
     "PowerEDU.onBumperEvent|block": "當開關|端口 %pin 被按下時",
-    "PowerEDU.DHT11|block": "DHT11溫度|端口 %pin|類型 %readtype",
-    "PowerEDU.Soil|block": "土壤傳感器|端口 %pin",
-    "PowerEDU.WaterLevel|block": "水位傳感器|端口 %pin",
-    "PowerEDU.MP3Connect|block": "MP3 連接|RX端口 %rxpin |TX端口 %txpin",
+    "PowerEDU.DHT11|block": "DHT11溫度(引腳B)|端口 %pin|類型 %readtype",
+    "PowerEDU.Soil|block": "土壤傳感器(引腳A)|端口 %pin",
+    "PowerEDU.WaterLevel|block": "水位傳感器(引腳A)|端口 %pin",
+    "PowerEDU.MP3Connect|block": "MP3 連接|TX端口(引腳A) %txpin |RX端口(引腳B) %rxpin",
     "PowerEDU.MP3Play|block": "MP3 播放|%PrevNext",
     "PowerEDU.MP3Volumn|block": "MP3 音量|%volumn",
     "PowerEDU.MP3PlayIndex|block": "MP3 播放 序號|%index",
     "PowerEDU.MP3PlayName|block": "MP3 播放 名稱|%name",
-    "PowerEDU.GC_MODE|block": "手勢/顏色 模式|%mode",
+    "PowerEDU.GC_MODE|block": "手勢/顏色(引腳A:SCL, 引腳B:SDA) 模式|%mode",
     "PowerEDU.GC_Color|block": "手勢/顏色 色環角度",
     "PowerEDU.GC_Brightness|block": "手勢/顏色 亮度",
     "PowerEDU.GC_LEDPWM|block": "手勢/顏色 LED 亮度|%pwm",
@@ -35,11 +35,11 @@
     "PowerEDU.GC_PROXIMITY|block": "手勢/顏色 距離",
     "PowerEDU.GC_Gesture|block": "手勢/顏色 上一個手勢",
     "PowerEDU.GC_RGB|block": "手勢/顏色 RGB|%rgb",
-    "PowerEDU.RfidProbe|block": "RFID 開始檢測",
+    "PowerEDU.RfidProbe|block": "RFID(引腳A:SCL, 引腳B:SDA) 開始檢測",
     "PowerEDU.RfidPresent|block": "RFID 檢測到卡片並等待",
     "PowerEDU.RfidWrite|block": "RFID寫 區|%sector 塊|%block 文本|%txt",
     "PowerEDU.RfidRead|block": "RFID讀 區|%sector 塊|%block",
-    "PowerEDU.rgbConnect|block": "RGB 連接到 %pin",
+    "PowerEDU.rgbConnect|block": "RGB 連接到(引腳B) %pin",
     "PowerEDU.showRainbow|block": "霓虹效果 從 %startHue|到 %endHue",
     "PowerEDU.showColor|block": "顯示顏色 %rgb=neopixel_colors",
     "PowerEDU.hsl|block": "色相 %h|飽和度 %s|亮度 %l",
@@ -51,10 +51,10 @@
     "PowerEDU.showNum|block": "顯示數字 %num 顏色%rgb=neopixel_colors",
     "PowerEDU.setBrightness|block": "RGB 亮度 %brightness",
     "PowerEDU.rgbPixRotate|block": "像素循環 %offset",
-    "PowerEDU.InfraTemp|block": "紅外溫度",
-    "PowerEDU.EnvironTemp|block": "環境溫度",
+    "PowerEDU.InfraTemp|block": "紅外溫度(引腳A:SCL, 引腳B:SDA)",
+    "PowerEDU.EnvironTemp|block": "環境溫度(引腳A:SCL, 引腳B:SDA)",
     "PowerEDU.InfraLED|block": "紅外測溫 LED 紅:%red 綠:%green 黃:%yellow",
-    "PowerEDU.segOn|block": "打開顯示",
+    "PowerEDU.segOn|block": "打開顯示(引腳A:SCL, 引腳B:SDA)",
     "PowerEDU.segOff|block": "關閉顯示",
     "PowerEDU.segClear|block": "清空顯示",
     "PowerEDU.segDigit|block": "顯示數字 %num|在 %bit",
