--- a/_locales/zh-CN/PowerEDU-strings.json
+++ b/_locales/zh-CN/PowerEDU-strings.json
@@ -1,7 +1,7 @@
 {
     "PowerEDU.Servo|block": "9g舵机|%index|角度 %degree",
-    "PowerEDU.GeekServo|block": "Geekservo|9g舵机|%index|角度 %degree",
-    "PowerEDU.GeekServo2KG|block": "Geekservo|2KG舵机|%index|角度 %degree",
+    "PowerEDU.GeekServo|block": "Geekservo 9g舵机|%index|角度 %degree",
+    "PowerEDU.GeekServo2KG|block": "Geekservo 2KG舵机|%index|角度 %degree",
     "PowerEDU.StepperDegree|block": "步进 28BYJ-48|%index|角度 %degree",
     "PowerEDU.StepperTurn|block": "步进 28BYJ-48|%index|圈数 %turn",
     "PowerEDU.StepperDual|block": "双步进(角度) |M1 %degree1| M2 %degree2",
@@ -10,23 +10,23 @@
     "PowerEDU.MotorRun|block": "电机|%index|速度 %speed",
     "PowerEDU.MotorRunDual|block": "电机|%motor1|速度 %speed1|%motor2|速度 %speed2",
     "PowerEDU.MotorRunDelay|block": "电机|%index|速度 %speed|延时 %delay|s",
-    "PowerEDU.MotorStop|block": "电机 停止|%index",
+    "PowerEDU.MotorStop|block": "电机 停止|%index|",
     "PowerEDU.MotorStopAll|block": "停止所有电机",
-    "PowerEDU.Ultrasonic|block": "超声波|端口 %pin",
-    "PowerEDU.SoundSensor|block": "声音强度|端口 %pin",
+    "PowerEDU.Ultrasonic|block": "超声波(引脚B)|端口 %pin",
+    "PowerEDU.SoundSensor|block": "声音强度(引脚A)|端口 %pin",
     "PowerEDU.Tracer|block": "巡线|端口 %pin",
     "PowerEDU.onTracerEvent|block": "当巡线|%pin 遇黑线时",
     "PowerEDU.Bumper|block": "开关|端口 %pin",
     "PowerEDU.onBumperEvent|block": "当开关|端口 %pin 被按下时",
-    "PowerEDU.DHT11|block": "DHT11温度|端口 %pin|类型 %readtype",
-    "PowerEDU.Soil|block": "土壤传感器|端口 %pin",
-    "PowerEDU.WaterLevel|block": "水位传感器|端口 %pin",
-    "PowerEDU.MP3Connect|block": "MP3 连接|RX端口 %rxpin |TX端口 %txpin",
+    "PowerEDU.DHT11|block": "DHT11温度(引脚B)|端口 %pin|类型 %readtype",
+    "PowerEDU.Soil|block": "土壤传感器(引脚A)|端口 %pin",
+    "PowerEDU.WaterLevel|block": "水位传感器(引脚A)|端口 %pin",
+    "PowerEDU.MP3Connect|block": "MP3 连接|TX端口(引脚A) %txpin |RX端口(引脚B) %rxpin",
     "PowerEDU.MP3Play|block": "MP3 播放|%PrevNext",
     "PowerEDU.MP3Volumn|block": "MP3 音量|%volumn",
     "PowerEDU.MP3PlayIndex|block": "MP3 播放 序号|%index",
     "PowerEDU.MP3PlayName|block": "MP3 播放 名称|%name",
-    "PowerEDU.GC_MODE|block": "手势/颜色 模式|%mode",
+    "PowerEDU.GC_MODE|block": "手势/颜色(引脚A:SCL, 引脚B:SDA) 模式|%mode",
     "PowerEDU.GC_Color|block": "手势/颜色 色环角度",
     "PowerEDU.GC_Brightness|block": "手势/颜色 亮度",
     "PowerEDU.GC_LEDPWM|block": "手势/颜色 LED 亮度|%pwm",
@@ -35,11 +35,11 @@
     "PowerEDU.GC_PROXIMITY|block": "手势/颜色 距离",
     "PowerEDU.GC_Gesture|block": "手势/颜色 上一个手势",
     "PowerEDU.GC_RGB|block": "手势/颜色 RGB|%rgb",
-    "PowerEDU.RfidProbe|block": "RFID 开始检测",
+    "PowerEDU.RfidProbe|block": "RFID(引脚A:SCL, 引脚B:SDA) 开始检测",
     "PowerEDU.RfidPresent|block": "RFID 检测到卡片并等待",
     "PowerEDU.RfidWrite|block": "RFID写 区|%sector 块|%block 文本|%txt",
     "PowerEDU.RfidRead|block": "RFID读 区|%sector 块|%block",
-    "PowerEDU.rgbConnect|block": "RGB 连接到 %pin",
+    "PowerEDU.rgbConnect|block": "RGB 连接到(引脚B) %pin",
     "PowerEDU.showRainbow|block": "霓虹效果 从 %startHue|到 %endHue",
     "PowerEDU.showColor|block": "显示颜色 %rgb=neopixel_colors",
     "PowerEDU.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
@@ -51,10 +51,10 @@
     "PowerEDU.showNum|block": "显示数字 %num 颜色%rgb=neopixel_colors",
     "PowerEDU.setBrightness|block": "RGB 亮度 %brightness",
     "PowerEDU.rgbPixRotate|block": "像素循环 %offset",
-    "PowerEDU.InfraTemp|block": "红外温度",
-    "PowerEDU.EnvironTemp|block": "环境温度",
+    "PowerEDU.InfraTemp|block": "红外温度(引脚A:SCL, 引脚B:SDA)",
+    "PowerEDU.EnvironTemp|block": "环境温度(引脚A:SCL, 引脚B:SDA)",
     "PowerEDU.InfraLED|block": "红外测温 LED 红:%red 绿:%green 黄:%yellow",
-    "PowerEDU.segOn|block": "打开显示",
+    "PowerEDU.segOn|block": "打开显示(引脚A:SCL, 引脚B:SDA)",
     "PowerEDU.segOff|block": "关闭显示",
     "PowerEDU.segClear|block": "清空显示",
     "PowerEDU.segDigit|block": "显示数字 %num|在 %bit",
@@ -78,7 +78,7 @@
     "PowerEDU.NeoPixelColors.Red|block": "红",
     "PowerEDU.NeoPixelColors.Orange|block": "橙",
     "PowerEDU.NeoPixelColors.Yellow|block": "黄",
-    "PowerEDU.NeoPixelColors.Green|block": "緑",
+    "PowerEDU.NeoPixelColors.Green|block": "绿",
     "PowerEDU.NeoPixelColors.Blue|block": "蓝",
     "PowerEDU.NeoPixelColors.Indigo|block": "靛蓝",
     "PowerEDU.NeoPixelColors.Violet|block": "紫罗兰",
